--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
                 <input type="checkbox" id="input--remember_me" name="remember_me">
                 <label for="input--remember_me">Remember Me</label>
             </div>
-            <div class="forgot-pass">Forgot Password?</div>
+            <div class="forgot-pass"><a href="/passwordRequest">Forgot Password?</a></div>
         </div>
         <input type="hidden" name="_csrf" value="{{csrf}}">
         <button type="submit" class="log__in--button" id="log__in--button">Login</button>
