--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -6,6 +6,11 @@
             <span></span>
             <label for="input--username--new"><i class="fa fa-light fa-user"></i>Username</label>
         </div>
+        <div class="input__field">
+            <input type="email" id="input--email--new" name="email" required>
+            <span></span>
+            <label for="input--email--new"><i class="fa fa-solid fa-lock"></i>Email</label>
+        </div>
 
         <div class="input__field">
             <input type="password" id="input--password--new" name="password" required>
