--- a/views/public/assets/styles.css
+++ b/views/public/assets/styles.css
@@ -211,6 +211,16 @@ form .input__field {
     border-radius: 5px;
 }
 
+.success {
+    font-size: 16px;
+    border: 1px solid rgba(0,0,0,0.5);
+    background: rgba(76, 188, 61, 0.5);
+    padding: 5px 10px;
+    text-align: center;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
 
 
 
